styles.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-size: 40px;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    background-color: rgb(46, 64, 98);
    height: 100vh;
}

div {
    border: 1px solid black;
    border-radius: 10px;
}

button {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 40px;
    color: white;
    border: 1px solid black;
    border-radius: 10px;
    font-family: inherit;
}

.container {
    display: flex;
    flex-direction: column;
    width: 310px;
    height: 690px;
    background-color: black;
}

.display {
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    width: 300px;
    height: 125px;
}

.operators {
    display: flex;
}

.operator {
    width: 77px;
    height: 77px;
    background-color: rgb(90, 112, 160);
}

.operator:hover {background-color: rgb(43, 53, 76)}

.operator:active {
    background-color: rgb(43, 53, 76);
    transform: translateY(4px); 
}

.buttons {
    display: flex;
    justify-content: center;
}

.numbers {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
}

.number, .extra {
    width: 100px;
    height: 100px;
    background-color: rgb(61, 71, 70);
}

.number:hover {background-color: rgb(30, 34, 33)}

.number:active {
    background-color:  rgb(30, 34, 33);
    transform: translateY(4px); 
}

.extra:hover {background-color:  rgb(30, 34, 33)}

.extra:active {
    background-color:  rgb(30, 34, 33);
    transform: translateY(4px);
}

.end {
    width: 155px;
    height: 80px;
    background-color: rgb(90, 112, 160);
}

.end:hover {background-color: rgb(43, 53, 76)}

.end:active {
    background-color: rgb(43, 53, 76);
    transform: translateY(4px);
}

.infoCon {
    border: none;
}

.info {
    font-size: 25px;
    border: none;
    color: rgba(146, 152, 151);
}

